XP-2792 Home app - Problems in mobile mode * Added responsiveness to the Home app without referencing common libs * Adjusted font size of the welcome text under low resolutions * Fixed the footer links overflowing over the Launcher panel * Fixed tip to not show under low resolutions

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/variables/mixins.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/variables/mixins.less
@@ -630,6 +630,8 @@
   font-weight: 100;
   position: absolute;
   bottom: @bottom;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .home-main-container-mixin() {
